k8s-manifests/local-pricechangewriterservice-deployment-gke.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricechangewriterservice-gke
  labels:
      app: pricechangewriterservice-gke
spec:
  selector:
    matchLabels:
      app: pricechangewriterservice-gke
  replicas: 1
  template:
    metadata:
      labels:
        app: pricechangewriterservice-gke
    spec:
      containers:
        - image: kriskrishna/pricechangewriterservice:latest
          imagePullPolicy: Always
          name: pricechangecalculator-doservice
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pricechangewriterservice-gke
  labels:
      app: pricechangewriterservice-gke
spec:
  #externalTrafficPolicy: Local
  #type: NodePort
  ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: 8080
  selector:
    app: pricechangewriterservice-gke
