k8s-manifests/local-service-cassandra.yaml
apiVersion: v1
kind: Service
metadata:
 name: external-cassandra-service
spec:
 #type: ClusterIP
 type: ExternalName
 externalName: mcjca032162.federated.fds
 ports:
 - name: "cassandra"
   protocol: "TCP"
   port: 9042
   targetPort: 9042
---
apiVersion: v1
kind: Endpoints
metadata:
 name: external-cassandra-service
subsets:
 - addresses:
    - ip: 11.208.32.162
   ports:
    - port: 9042
