k8s-manifests/pricechangewriterservice-ilb.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "pricechangewriterservice-internalservice"
  annotations:
      cloud.google.com/load-balancer-type: "Internal"
  labels:
      app: "pricechangewriterservice"
spec:
  type: "LoadBalancer"
  ports:
  - port: 8080
    protocol: "TCP"
    targetPort: 8080
  selector:
    app: "pricechangewriterservice"
