k8s-manifests/pricechangewriterservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricechangewriterservice
  labels:
      app: pricechangewriterservice
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: pricechangewriterservice
